--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.2.0</version>
+            <version>2.4.0</version>
         </dependency>
         <dependency>
             <groupId>com.twitter</groupId>
@@ -42,7 +42,53 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
-        </dependency>
+        </dependency>        
+		<dependency>
+		    <groupId>org.geotools</groupId>
+		    <artifactId>gt-main</artifactId>
+		    <version>21.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.locationtech.geomesa</groupId>
+		    <artifactId>geomesa-utils_2.11</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.locationtech.geomesa</groupId>
+		    <artifactId>geomesa-kafka-datastore_2.11</artifactId>
+		    <version>2.4.0</version>
+		</dependency>	
+		<dependency>
+		  <groupId>org.locationtech.geomesa</groupId>
+		  <artifactId>geomesa-tools_2.11</artifactId>
+		  <version>2.4.0</version>
+		  <classifier>data</classifier>
+		</dependency>
+		<dependency>
+		  <groupId>org.locationtech.geomesa</groupId>
+		  <artifactId>geomesa-convert-all_2.11</artifactId>
+		  <version>2.4.0</version>
+		</dependency>	
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.7.28</version>
+		</dependency>		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-simple</artifactId>
+		    <version>1.7.28</version>
+		</dependency>
     </dependencies>
 
+	<repositories>
+	  <repository>
+	    <id>osgeo</id>
+	    <url>https:///repo.osgeo.org/repository/release</url>
+	  </repository>
+	  <repository>
+	    <id>confluent</id>
+	    <url>https://packages.confluent.io/maven/</url>
+	  </repository>
+	</repositories>
 </project>
